--- a/src/pages/home/about/About.scss
+++ b/src/pages/home/about/About.scss
@@ -5,12 +5,12 @@
   background-color: #d5ecd2;
   border-radius: 10px;
   padding-top: 2rem;
-  padding-bottom: 0.7rem;
+  padding-bottom: 1.5rem;
   padding-left: 2rem;
   padding-right: 2rem;
 
   .box-picture {
-    height: calc(100% - 22px);
+    height: calc(100% - 5px);
 
     .picture {
       width: 100%;
@@ -49,11 +49,15 @@
     .title {
       font-weight: bold;
       font-size: 1.1rem;
+      margin-bottom: 1rem;
     }
 
-    p {
-      margin-top: 0.6rem;
+    .text {
       line-height: 1.6rem;
+    }
+
+    .space-text {
+      margin-top: 0.5rem;
     }
   }
 }
