--- a/src/pages/shop/components/product/Product.scss
+++ b/src/pages/shop/components/product/Product.scss
@@ -4,13 +4,30 @@
   .product-box {
     max-width: 250px;
     margin: auto;
-    transition: 0.4s;
+    transition: 0.5s;
 
     &:hover {
-      scale: 1.03;
+      transform: scale(1.03);
+
+      .picture {
+        display: none;
+      }
+
+      .pictureBis {
+        display: block;
+
+        .show-product {
+          background-color: rgba($color: #000000, $alpha: 0.2);
+        }
+      }
     }
 
-    .picture {
+    .pictureBis {
+      display: none;
+    }
+
+    .picture,
+    .pictureBis {
       width: 100%;
       margin: auto;
       height: 340px;
@@ -30,14 +47,6 @@
         height: 340px;
       }
 
-      &:hover .show-product {
-        background-color: rgba($color: #000000, $alpha: 0.2);
-      }
-
-      &:hover .show-product svg {
-        scale: 1;
-      }
-
       .show-product {
         display: flex;
         height: 100%;
@@ -45,13 +54,6 @@
         align-items: center;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
-        transition: 0.6s;
-
-        svg {
-          scale: 0;
-          color: white;
-          transition: 0.6s;
-        }
       }
     }
 
