--- a/src/pages/home/productsExemple/ProductsExemple.scss
+++ b/src/pages/home/productsExemple/ProductsExemple.scss
@@ -54,7 +54,7 @@
       transition: 0.3s;
 
       &:hover {
-        scale: 1.05;
+        transform: scale(1.03);
         cursor: pointer;
       }
 
