--- a/src/pages/home/about/About.scss
+++ b/src/pages/home/about/About.scss
@@ -5,7 +5,7 @@
   background-color: #d5ecd2;
   border-radius: 10px;
   padding-top: 2rem;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1.9rem;
   padding-left: 2rem;
   padding-right: 2rem;
 
@@ -21,11 +21,12 @@
       border-radius: 10px;
       background-repeat: no-repeat;
       background-size: cover;
-      background-position: center center;
+      background-position: bottom right;
     }
 
     @media screen and (max-width: 992px) {
       .picture {
+        background-position: 75%;
       }
     }
 
@@ -39,17 +40,17 @@
   .info {
     .title {
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       margin-bottom: 1rem;
     }
 
     .text {
-      font-size: 0.9rem;
       line-height: 1.6rem;
+      color: #333333;
     }
 
     .space-text {
-      margin-top: 0.5rem;
+      margin-top: 0.6rem;
     }
   }
 }
